Fix unread channel spacing in inbox

--- a/Themes/Material-Discord/src/_selectorPlaceholders.scss
+++ b/Themes/Material-Discord/src/_selectorPlaceholders.scss
@@ -8005,6 +8005,9 @@ pre {
 .tutorialIcon__2692d{
 	@extend %unreadTutorialIcon !optional;
 }
+.scroller__2692d {
+	@extend %unreadChannelList !optional;
+}
 .channel__427f0 {
 	@extend %unreadChannel !optional;
 }
