--- a/Themes/Material-Discord/src/popouts/_messages.scss
+++ b/Themes/Material-Discord/src/popouts/_messages.scss
@@ -104,7 +104,7 @@ body:active {
 	}
 }
 
-%unreadChannel {
+%unreadChannelList > :first-child %unreadChannel {
 	margin-top: 16px;
 }
 
